Code Change: Profile Pic and Thumbnails
I added some lines to the _default layout and yo the index.html of the
main page, to be able to show a profile pic and some thumbnails of the
posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,8 @@
         </div>
         <div id="sub-content">
             <div id="section-about" class="section">
+			<img src="\images\profile\sa_small.png" alt="This is me!" style="width:145px;height:136px;">
+
                 <p>
                     Hi, I am Santiago Alvarez.
 					I'm a game developer with more than 4 years of experience, 
