--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="/css/small.css" media="(max-width:679px)" />
     <link rel="stylesheet" href="/css/print.css" media="print" />
     <link rel="stylesheet" href="/css/syntax.css" />
+	<!--<link rel="stylesheet" href="/css/main2.css" />
+	<link rel="stylesheet" href="/css/bootstrap.css" />
+	<link rel="stylesheet" href="/css/font-awesome.min.css" />
+
     <!--[if IE]>
         <style type="text/css">img, p { width:100%; }</style>
     <![endif]-->
