--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <div id="post" class="post">
     <h1 class="title">{{ page.title }}</h1>
+	<h6 class="title">{{ page.subtitle }}</h6>
     {{ content }}
     <p>
         <span class="date">{{ page.date | date: "%B %d, %Y" }}
