New Beat Boy Project

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,12 +44,15 @@
 			<img src="\images\profile\sa_small.png" alt="This is me!" style="width:145px;height:136px;">
 
                 <p>
-                    Hi, I am Santiago Alvarez.
-					I'm a game developer with more than 4 years of experience, 
-					I'm currently working as a game developer at
+                    Hi, I'm Santiago,
+					a game developer.
+				</p>
+				 <p>
+					I'm finishing my studies in Systems Engineering and
+					I have experience working as a game developer at
 					<a href="http://www.cocodrilodog.com/"
                         target="_blank">Cocodrilo Dog Games</a>
-						and at the same time I'm finishing my studies in Systems Engineering.
+						and at Universidad Nacional de Colombia.
                 </p>
                 <p>
 					I'm interested in all kind of games and development areas,
