Meta Info For Default Image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
 <head>
+	<meta property="og:title" content="Santiago Alvarez - Portfolio" />		
+	<meta property="og:image" content="http://santiagoalvarez.me/images/BEAT%20BOY/BEATBOY-SPS.jpg" />
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
     <meta name="author" content="Santiago Alvarez" />
