--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,141 +1,135 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#">
+{% include google_analytics.html %}
 <head>
-	<meta property="og:title" content="Santiago Alvarez - Portfolio" />		
-	<meta property="og:image" content="http://santiagoalvarez.me/images/BEAT%20BOY/BEATBOY-SPS.jpg" />
-    <meta charset="utf-8" />
+    <meta property="og:title" content="Santiago Alvarez - Portfolio"/>
+    <meta property="og:image" content="http://santiagoalvarez.me/images/BEAT%20BOY/BEATBOY-SPS.jpg"/>
+    <meta charset="utf-8"/>
     <title>{{ page.title }}</title>
-    <meta name="author" content="Santiago Alvarez" />
+    <meta name="author" content="Santiago Alvarez"/>
     <meta name="viewport"
-    content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable-no" />
-    <link rel="stylesheet" href="/css/style.css" />
+          content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable-no"/>
+    <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/medium.css"
-        media="(min-width:680px) and (max-width:922px)" />
-    <link rel="stylesheet" href="/css/small.css" media="(max-width:679px)" />
-    <link rel="stylesheet" href="/css/print.css" media="print" />
-    <link rel="stylesheet" href="/css/syntax.css" />
-	<!--<link rel="stylesheet" href="/css/main2.css" />
-	<link rel="stylesheet" href="/css/bootstrap.css" />
-	<link rel="stylesheet" href="/css/font-awesome.min.css" />
-
-    <!--[if IE]>
-        <style type="text/css">img, p { width:100%; }</style>
-    <![endif]-->
-    <!--[if lt IE 9]>
-        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+          media="(min-width:680px) and (max-width:922px)"/>
+    <link rel="stylesheet" href="/css/small.css" media="(max-width:679px)"/>
+    <link rel="stylesheet" href="/css/print.css" media="print"/>
+    <link rel="stylesheet" href="/css/syntax.css"/>
+   
     <script src="/scripts/respond.min.js" type="text/javascript"></script>
-   </head>
+</head>
 <body>
-    <header id="top">
-        <div id="logo"><a href="/">Santiago Alvarez</a></div>
-    </header>
-    <div id="wrapper">
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/resume">Resume</a></li>
-            </ul>
-        </nav>
-        <div id="content">
-            {{ content }}
-        </div>
-        <div id="sub-content">
-            <div id="section-about" class="section">
-			<img src="\images\profile\sa_small.png" alt="This is me!" style="width:145px;height:136px;">
-
-                <p>
-                    Hi, I'm Santiago,
-					a game developer.
-				</p>
-				 <p>
-					I'm finishing my studies in Systems Engineering and
-					I have experience working as a game developer at
-					<a href="http://www.cocodrilodog.com/"
-                        target="_blank">Cocodrilo Dog Games</a>
-						and at Universidad Nacional de Colombia.
-                </p>
-                <p>
-					I'm interested in all kind of games and development areas,
-					but my major focus is on <i>Gameplay</i>, <i>AI</i> and <i>Networking</i>; 
-					I also have skills in other fields like databases,
-					level design, mechanics design, animation,
-					3D modelling and I can even pitch projects!
-                 <!--   I've had an immense interest in technology and video
-                    games for as long as I can remember. When I'm not
-                    developing my knowledge in programming, I enjoy drawing
-                    and playing video games.-->
-                </p>
-                <p>
-					I'm always in search for learning something new, any kind of stuff, 
-					from video game development through dark matter and 
-					even how to construct a potato clock. 
-                    <!--Among the many interests I have in programming, I'm currently
-                    focused on <i>data-oriented design</i>, <i>networking</i>,
-                    and <i>3D graphics</i>.-->
-                </p>
-            </div>
-            <div id="section-contact" class="section">
-              <p>
-                    Contact info: <a
-                        href="mailto:saalvarezva@gmail.com">saalvarezva@gmail.com</a>
-                </p>
-                <p>
-                    <ul>
-                        <li>
-                            <a href="http://twitter.com/#!/saalvarezva"
-                                target="_blank" id="twitter-button"
-                                title="Twitter"></a>
-                        </li>
-                        <li>
-                            <a href="http://www.linkedin.com/in/saalvarezva"
-                                target="_blank" id="linkedin-button"
-                                title="LinkedIn"></a>
-                        </li>
-                        <li>
-                            <a href="http://github.com/tiag"
-                                target="_blank" id="github-button"
-                                title="GitHub"></a>
-                        </li>
-                        <!--<li>
-                            <a href=""
-                                target="_blank" id="rss-button"
-                                title="Feed"></a>
-                        </li>-->
-
-                    </ul>
-                </p>
-            </div>
-            <!-- <div id="section-twitter" class="section">
-                <div id="tweet">
-                </div>
-            </div> -->
-        </div>
+<header id="top">
+    <div id="logo"><a href="/">Santiago Alvarez</a>
     </div>
-    <footer>
-        <ul class="nav">
-            <li><a href="#top">Top</a> /</li>
-            <li><a href="/">Home</a> /</li>
-            <li><a href="/about">About</a> /</li>
+</header>
+<div id="wrapper">
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/resume">Resume</a></li>
         </ul>
-         <p>
-        <!--    <a href="http://jekyllrb.com/" target="_blank">jekyll</a>,
-            <a href="http://www.vim.org/" target="_blank">vim</a>, and
-            <a href="http://daringfireball.net/projects/markdown/"
-                target="_blank">markdown</a>.-->
-            <br />© 2015 Santiago Alvarez
-        </p>
-    </footer>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"
+    </nav>
+    <div id="content">
+        {{ content }}
+    </div>
+    <div id="sub-content">
+        <div id="section-about" class="section">
+            <img src="\images\profile\sa_small.png" alt="This is me!" style="width: 145px; height: 136px;">
+
+            <p>
+                Hi, I'm Santiago,
+                a game developer.
+            </p>
+            <p>
+                I'm currently working as a game developer at <a href="http://www.rainbowtreeinc.com/">Rainbow Tree Inc</a>, also
+                I'm finishing my studies in Systems Engineering and
+                I have experience working as a game developer at
+                <a href="http://www.cocodrilodog.com/"
+                   target="_blank">Cocodrilo Dog Games</a>
+                and at Universidad Nacional de Colombia.
+            </p>
+            <p>
+                I'm interested in all kind of games and development areas,
+                but my major focus is on <i>Gameplay</i>, <i>AI</i> and <i>Networking</i>;
+                I also have skills in other fields like databases,
+                level design, mechanics design, animation,
+                3D modelling and I can even pitch projects!
+                <!-- I've had an immense interest in technology and video
+                games for as long as I can remember. When I'm not
+                developing my knowledge in programming, I enjoy drawing
+                and playing video games.-->
+            </p>
+            <p>
+                I'm always in search for learning something new, any kind of stuff,
+                from video game development through dark matter and
+                even how to construct a potato clock.
+                <!--Among the many interests I have in programming, I'm currently
+                focused on <i>data-oriented design</i>, <i>networking</i>,
+                and <i>3D graphics</i>.-->
+            </p>
+        </div>
+        <div id="section-contact" class="section">
+            <p>
+                Contact info: <a
+                                  href="mailto:saalvarezva@gmail.com">saalvarezva@gmail.com</a>
+            </p>
+            <p>
+                <ul>
+                    <li>
+                        <a href="http://twitter.com/#!/saalvarezva"
+                           target="_blank" id="twitter-button"
+                           title="Twitter"></a>
+                    </li>
+                    <li>
+                        <a href="http://www.linkedin.com/in/saalvarezva"
+                           target="_blank" id="linkedin-button"
+                           title="LinkedIn"></a>
+                    </li>
+                    <li>
+                        <a href="http://github.com/tiag"
+                           target="_blank" id="github-button"
+                           title="GitHub"></a>
+                    </li>
+                    <!--<li>
+                        <a href=""
+                           target="_blank" id="rss-button"
+                           title="Feed"></a>
+                    </li>-->
+
+                </ul>
+            </p>
+        </div>
+        <!-- <div id="section-twitter" class="section">
+            <div id="tweet">
+            </div>
+        </div> -->
+    </div>
+</div>
+<footer>
+    <ul class="nav">
+        <li><a href="#top">Top</a> /</li>
+        <li><a href="/">Home</a> /</li>
+        <li><a href="/about">About</a> /</li>
+        <li><a href="/resume">Resume</a></li>
+    </ul>
+    <p>
+        <!-- <a href="http://jekyllrb.com/" target="_blank">jekyll</a>,
+        <a href="http://www.vim.org/" target="_blank">vim</a>, and
+        <a href="http://daringfireball.net/projects/markdown/"
+           target="_blank">markdown</a>.-->
+        <br/>© 2015 Santiago Alvarez
+    </p>
+</footer>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"
         type="text/javascript"></script>
-    <script src="/scripts/scroll.js" type="text/javascript"></script>
-    <script src="/scripts/img-sizer.js" type="text/javascript"></script>
-    <script src="/scripts/fitvid.js" type="text/javascript"></script>
-    <script src="/scripts/jquery.toc.min.js" type="text/javascript"></script>
-    <script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js"
+<script src="/scripts/scroll.js" type="text/javascript"></script>
+<script src="/scripts/img-sizer.js" type="text/javascript"></script>
+<script src="/scripts/fitvid.js" type="text/javascript"></script>
+<script src="/scripts/jquery.toc.min.js" type="text/javascript"></script>
+<script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js"
         type="text/javascript"></script>
-    <script src="/scripts/cb.js" type="text/javascript"></script>
+<script src="/scripts/cb.js" type="text/javascript"></script>
 </body>
 </html>
