--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -346,6 +346,13 @@ img {
   max-width: 100%;
 }
 
+.img-icon {
+  display: inline-block;
+  height: 80px;
+  max-width: 100%;
+  max-height: 1%;
+}
+
 .img-rounded {
   border-radius: 6px;
 }
