--- a/views/ecologistNetPosition.html
+++ b/views/ecologistNetPosition.html
@@ -51,6 +51,19 @@
         <span class="mission2ModalNextButton" ng-click="beginInsect()">BEGIN <i class="fa fa-chevron-right"></i></span>
     </div>
 
+    <div id="mission2EndRight">
+        <div class="mission2EndRightHeader" id="mission2EndRightHeader"><h1>GREAT JOB!</h1></div>
+        <div class="mission2EndModalTextContent">
+            <div class="row">
+                <div class="col-left-1">
+                    <span id="mission2EndModalTextContentText">Now position your net to capture the Insectivorous Bats. Your goal is to capture five bats to send to the lab for testing.<br><br></span>
+                </div>
+            </div>
+        </div>
+        <br>
+        <span class="mission2ModalNextButton" ng-click="seeResults()">SEE RESULTS <i class="fa fa-chevron-right"></i></span>
+    </div>
+
     <div id="netPositionConfirmTitleText">WRONG!</div>
     <div id="netPositionConfirmDescriptionText">Fruit Bats like to fly at<br>higher altitudes</div>
     <!--<div id="modalMiddle">
