--- a/views/ecologistProtectiveGear.html
+++ b/views/ecologistProtectiveGear.html
@@ -14,7 +14,7 @@
 </div>
 
 <div id="modalRight">
-	<div class="modalHeader"></div>
+	<div class="modalHeaderRight"></div>
 	<div class="modalTextContent">
 		<span id="modalTextContentText"></span>
 	</div>
