Timer Update and bats capture circle

--- a/views/ecologistNetPosition.html
+++ b/views/ecologistNetPosition.html
@@ -35,6 +35,24 @@
     <img src="images/ecologist/2B_3_InsectivrousBat.png" id="insectBat3" class="insectBat3" />
     <img src="images/ecologist/2B_3_InsectivrousBat.png" id="insectBat4" class="insectBat4" />
     <img src="images/ecologist/2B_3_InsectivrousBat.png" id="insectBat5" class="insectBat5" />
+
+    <img src="images/ecologist/2B_CaptureCircle.png" id="batCaptureCircle1" class="batCaptureCircle1" />
+    <img src="images/ecologist/2B_CaptureCircle.png" id="batCaptureCircle2" class="batCaptureCircle2" />
+    <img src="images/ecologist/2B_CaptureCircle.png" id="batCaptureCircle3" class="batCaptureCircle3" />
+    <img src="images/ecologist/2B_CaptureCircle.png" id="batCaptureCircle4" class="batCaptureCircle4" />
+    <img src="images/ecologist/2B_CaptureCircle.png" id="batCaptureCircle5" class="batCaptureCircle5" />
+
+    <img src="images/ecologist/Icon_ArrowDown.png" id="iconArrowDown1" class="iconArrowDown1" />
+    <img src="images/ecologist/Icon_ArrowDown.png" id="iconArrowDown2" class="iconArrowDown2" />
+    <img src="images/ecologist/Icon_ArrowDown.png" id="iconArrowDown3" class="iconArrowDown3" />
+    <img src="images/ecologist/Icon_ArrowDown.png" id="iconArrowDown4" class="iconArrowDown4" />
+    <img src="images/ecologist/Icon_ArrowDown.png" id="iconArrowDown5" class="iconArrowDown5" />
+
+    <span id="swipeText1">SWIPE TO COLLECT BAT</span>
+    <span id="swipeText2">SWIPE TO COLLECT BAT</span>
+    <span id="swipeText3">SWIPE TO COLLECT BAT</span>
+    <span id="swipeText4">SWIPE TO COLLECT BAT</span>
+    <span id="swipeText5">SWIPE TO COLLECT BAT</span>
     
     <div id="mission2InsectModalRight">
         <div class="mission2InsectBatModalHeader"><h1>GREAT JOB!</h1></div>
@@ -64,7 +82,7 @@
         <span class="mission2ModalNextButton" ng-click="seeResults()">SEE RESULTS <i class="fa fa-chevron-right"></i></span>
     </div>
 
-    <div id="netPositionConfirmTitleText">WRONG!</div>
+    <div id="netPositionConfirmTitleText">ARE YOU SURE?</div>
     <div id="netPositionConfirmDescriptionText">Fruit Bats like to fly at<br>higher altitudes</div>
     <!--<div id="modalMiddle">
         <div class="mission2ModalHeader"><h1>PLACE MIST NET</h1></div>
@@ -85,7 +103,7 @@
 
 <div id="mission2StartCountdown">
     <svg>
-        <circle cx="125" cy="125" r="100" class="currentObjectiveMission2CountdownTimer"></circle>
+        <circle cx="125" cy="125" r="100" class="currentObjectiveMission2CountdownTimer" id="currentObjectiveMission2CountdownTimer"></circle>
     </svg>
 </div>
 
