--- a/css/styles.css
+++ b/css/styles.css
@@ -1069,3 +1069,33 @@ svg {
     /*transform: scale(0.4, 0.4);*/
     z-index: 1;
 }
+
+#batCaptureCircle1,
+#batCaptureCircle2,
+#batCaptureCircle3,
+#batCaptureCircle4,
+#batCaptureCircle5,
+#iconArrowDown1,
+#iconArrowDown2,
+#iconArrowDown3,
+#iconArrowDown4,
+#iconArrowDown5 {
+   position: absolute;
+    left: 1325px;
+    top: 690px;
+    z-index: 0;
+}
+
+#swipeText1,
+#swipeText2,
+#swipeText3,
+#swipeText4,
+#swipeText5 {
+    position: absolute;
+    font-family: polarisMedium;
+    font-size: 16px;
+    color: #fff;
+    left: 1325px;
+    top: 690px;
+    z-index: 0;
+}
