--- a/views/ecologistNet.html
+++ b/views/ecologistNet.html
@@ -12,3 +12,27 @@
     <br>
     <span class="mission2ModalNextButton" ng-click="beginMission()">BEGIN <i class="fa fa-chevron-right"></i></span>
 </div>
+
+<div id="mission2EndRight">
+    <div class="mission2EndRightHeader" id="mission2EndRightHeader"><h1>GREAT JOB!</h1></div>
+    <div class="mission2EndModalTextContent">
+        <div class="row">
+            <div class="col-left-1">
+                <span id="mission2EndModalTextContentText">Now position your net to capture the Insectivorous Bats. Your goal is to capture five bats to send to the lab for testing.<br><br></span>
+            </div>
+        </div>
+    </div>
+    <br>
+    <span class="mission2ModalNextButton" ng-click="seeResults()">SEE RESULTS <i class="fa fa-chevron-right"></i></span>
+</div>
+
+<div id="mission2StartCountdown">
+    <svg>
+        <circle cx="125" cy="125" r="100" class="currentObjectiveMission2CountdownTimer" id="currentObjectiveMission2CountdownTimer"></circle>
+    </svg>
+</div>
+
+<div id="missionBeginText">
+    <span>MISSION WILL <br>END IN</span>
+</div>
+<span id="missionCountdownNumber"></span>
