--- a/views/ecologistNetPosition.html
+++ b/views/ecologistNetPosition.html
@@ -1,29 +1,49 @@
-<div class="container-fluid">
-    <div class="row headerRow">
+<div class="container-fluid missionHeader">
+    <div class="row">
         <div class="col-md-3">
-            <div class="missionObjectiveBox">
-                <span class="missionObjectiveBoxHeader">OBJECTIVE 1&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <div class="objectivePapers">
+                <img src="images/ecologist/2B_SmallPaper1.png"  id="fruitBatsPaper"/>
+                <img src="images/ecologist/2B_SmallPaper2.png"  id="insectBatsPaper"/>
             </div>
-        </div>
-        <div class="col-md-6 text-center">
-            <h1 class="missionObjectiveHeader" id="Title">PLACE MIST NET</h1>
-            <span id="ecologistMission2TopTaskDescription">Move the net into the flight path<br>of the Fruit Bats.</span>
-        </div>
-        <div class="col-md-3">
-            <div class="topCornerBatModal" id="topCornerBatModal">
-                <span id="topCornerBat"><img src="images/ecologist/2B_2_FruitBat.png" id="topCornerBat"/></span>
-                <span id="topCornerBatModalText">Fruit Bat</span>
-                <span id="topCornerBatModalCounter"><br><br><p>0/5</p></span>
-            </div>
-            <div class="topCornerBatModalInsect" id="topCornerBatModalInsect">
-                <span id="topCornerInsectBat"><img src="images/ecologist/2B_3_InsectivrousBat.png" id="topCornerInsectBat" /></span>
-                <span id="topCornerBatModalInsectText">Insectivorous Bat</span>
-                <span id="topCornerInsectBatModalCounter"><br><br><p>0/5</p></span>
-            </div>
+
+            <img src="images/Global_Check.png" id="checkFruitBats" />
+            <img src="images/Global_Check.png" id="checkInsectBats" />
+
+            <span id="topCornerFruitBatCounterMission2B">0</span><span id="topCornerFruitBatCounterMissionGoal2B">/5</span>
+
+            <img src="images/ecologist/2B_2_FruitBat.png" id="fruitBatIMGPaper" />
+            <span class="objectiveHeaderMission2B" id="Objective1Mission2B">FRUIT BATS</span>
+            
+            <span id="topCornerInsectBatCounterMission2B">0</span><span id="topCornerInsectBatCounterMissionGoal2B">/5</span>
+            <img src="images/ecologist/2B_3_InsectivrousBat.png" id="insectBatIMGPaper" />
+            <span class="objectiveHeaderMission2B" id="Objective2Mission2B">INSECTIVOROUS<br>BATS</span>
+
+            <hr class="leftMissionHeader2BHR">
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-3">
+            <i class="fa fa-star mission2BStar" id="2bMissionStar1"></i>&nbsp;&nbsp;<i class="fa fa-star mission2BStar" id="2bMissionStar2"></i>&nbsp;&nbsp;<i class="fa fa-star mission2BStar"  id="2bMissionStar3"></i>&nbsp;&nbsp;<i class="fa fa-star mission2BStar"  id="2bMissionStar4"></i>&nbsp;&nbsp;<i class="fa fa-star mission2BStar"  id="2bMissionStar5"></i>
+        </div>
+    </div>
+    <span class="starEarnedTitle" id="starEarnedTitle">GREAT JOB!</span>
+
+    <span class="fruitBatsTutorialTitle" id="fruitBatsTutorialTitle">FRUIT BATS</span>
+    <span class="fruitBatsTutorialDescription" id="fruitBatsTutorialDescription">Nests in trees, fly higher up</span>
+    <span class="fruitBatsTutorialNet" id="fruitBatsTutorialNet">Bats have carried Nipah Virus in the past.<br>We need to test both types to see if they are infected!<br>PLACE THE NET TO CATCH BATS.</span>
+    <span class="insectBatsTutorialTitle" id="insectBatsTutorialTitle">INSECTIVOROUS BATS</span>
+    <span class="insectBatsTutorialDescription" id="insectBatsTutorialDescription">Likes rocky caves, fly low to the ground</span>
+    <img src="images/ecologist/2B_1_Arrow.png" id="netTutorialArrow" />
+
+</div>
+
+
+<div class="container-fluid">
+
+    <img src="images/ecologist/2B_1_Arrow2.png" class="starArrow12B" id="starArrow12B" />
+    <span class="protectiveGear2BChoice"></span>
     <img src="images/ecologist/2B_NetCircluarField.png" id="netCircularField" />
-    <img src="images/ecologist/2B_Net_High.png" id="netNormal" />
+    <img src="images/ecologist/2B_NetTall.png" id="netNormal" />
     <img src="images/ecologist/Icon_Hand_3.png" id="netDragHand" />
     <img src="images/ecologist/2b_1_FuitBat_1.png" id="fruitBat1" class="fruitBat1" />
     <img src="images/ecologist/2b_1_FuitBat_2.png" id="fruitBat2" class="fruitBat2"/>
@@ -42,34 +62,31 @@
     <img src="images/ecologist/2B_CaptureCircle.png" id="batCaptureCircle4" class="batCaptureCircle4" />
     <img src="images/ecologist/2B_CaptureCircle.png" id="batCaptureCircle5" class="batCaptureCircle5" />
 
-    <img src="images/ecologist/Icon_ArrowDown.png" id="iconArrowDown1" class="iconArrowDown1" />
-    <img src="images/ecologist/Icon_ArrowDown.png" id="iconArrowDown2" class="iconArrowDown2" />
-    <img src="images/ecologist/Icon_ArrowDown.png" id="iconArrowDown3" class="iconArrowDown3" />
-    <img src="images/ecologist/Icon_ArrowDown.png" id="iconArrowDown4" class="iconArrowDown4" />
-    <img src="images/ecologist/Icon_ArrowDown.png" id="iconArrowDown5" class="iconArrowDown5" />
+    <img src="images/ecologist/2B_ArrowDown.png" id="iconArrowDown1" class="iconArrowDown1" />
+    <img src="images/ecologist/2B_ArrowDown.png" id="iconArrowDown2" class="iconArrowDown2" />
+    <img src="images/ecologist/2B_ArrowDown.png" id="iconArrowDown3" class="iconArrowDown3" />
+    <img src="images/ecologist/2B_ArrowDown.png" id="iconArrowDown4" class="iconArrowDown4" />
+    <img src="images/ecologist/2B_ArrowDown.png" id="iconArrowDown5" class="iconArrowDown5" />
 
     <span id="swipeText1">SWIPE TO COLLECT BAT</span>
     <span id="swipeText2">SWIPE TO COLLECT BAT</span>
     <span id="swipeText3">SWIPE TO COLLECT BAT</span>
     <span id="swipeText4">SWIPE TO COLLECT BAT</span>
     <span id="swipeText5">SWIPE TO COLLECT BAT</span>
-    
-    <div id="mission2InsectModalRight">
-        <div class="mission2InsectBatModalHeader"><h1>GREAT JOB!</h1></div>
-        <div class="mission2ModalTextContent">
-            <div class="row">
-                <div class="col-left-1">
-                    <span id="mission2ModalTextContentText">Now position your net to capture the Insectivorous Bats. Your goal is to capture five bats to send to the lab for testing.<br><br></span>
-                    <img src="images/ecologist/2B_3_InsectivrousBat.png" height="40%" width="40%" />
-                    <span id="mission2ModalTextContent"><line><t>INSECTIVOROUS BAT</line></span>
-                </div>
-            </div>
-        </div>
-        <br>
-        <span class="mission2ModalNextButton" ng-click="beginInsect()">BEGIN <i class="fa fa-chevron-right"></i></span>
-    </div>
 
-    <div id="mission2EndRight">
+    <span class="fruitBatsReminderTitle" id="fruitBatsReminderTitle">DON'T FORGET!</span>
+    <span class="fruitBatsReminderDescription" id="fruitBatsReminderDescription">Fruit Bats fly high.</span>
+    <span class="insectBatsReminderTitle" id="insectBatsReminderTitle">DON'T FORGET!</span>
+    <span class="insectBatsReminderDescription" id="insectBatsReminderDescription">Insectivorous Bats fly low to the ground.</span>
+    <img src="images/ecologist/2B_1_Arrow.png" class="repositionArrow" id="repositionArrow" />
+    <span class="repositionTitle" id="repositionTitle">REPOSITION THE NET!</span>
+    <span class="repositionDescription" id="repositionDescription">We need to catch fruit bats!</span>
+
+    <img src="images/Global_Expert.png" id="globalExpert" />
+    <img src="images/GLobal_SpeechBubble.png" id="globalExpertBubble" />
+    <span id="globalExpertDescription">Good work! Our Lab<br>Diagnostician will sample<br>these bats and release<br>them unharmed.</span>
+
+    <!--<div id="mission2EndRight">
         <div class="mission2EndRightHeader" id="mission2EndRightHeader"><h1>GREAT JOB!</h1></div>
         <div class="mission2EndModalTextContent">
             <div class="row">
@@ -80,25 +97,64 @@
         </div>
         <br>
         <span class="mission2ModalNextButton" ng-click="seeResults()">SEE RESULTS <i class="fa fa-chevron-right"></i></span>
-    </div>
+    </div>-->
 
-    <div id="netPositionConfirmTitleText">ARE YOU SURE?</div>
-    <div id="netPositionConfirmDescriptionText">Fruit Bats like to fly at<br>higher altitudes</div>
-    <!--<div id="modalMiddle">
-        <div class="mission2ModalHeader"><h1>PLACE MIST NET</h1></div>
-        <div class="mission2ModalTextContent">
-            <div class="row">
-                <div class="col-left-1">
-                    <span id="mission2ModalTextContentText">Position your net to capture the Insectivorous Bats. Your goal is to capture five bats to send to the lab for testing.<br><br></span>
-                    <img src="images/ecologist/2B_3_InsectivrousBat.png" height="60%" width="60%" />
-                    <span id="mission2ModalTextContent"><line>INSECTIVOROUS BAT</line></span>
-                </div>
+   
+</div>
+
+
+<span class="protectiveGear2BProTip" id="protectiveGear2BProTip">PRO TIP: <br>Bats have been known to carry<br>Nipah Virus in the past.</span>
+<img src="images/protectivegear.png" id="protective2BGear" />
+
+<div  class="modal2BMiddle" id="modal2BMiddle">
+    <span class="modalHeader">PROTECTIVE GEAR</span>
+    <div class="modal2BTextContent">
+        <span id="modal2BTextContent">Quick! Before you go into the field do you need protective gear?</span>
+        <br>
+        <br>
+        <div class="col-md-6">
+            <button class="pgYesNoButton" ng-click="yes()">YES</button>
+        </div>
+        <div class="col-md-6">
+            <button class="pgYesNoButton" ng-click="no()">NO</button>
+        </div>
+        <br>
+        <br>
+    </div>
+    <br>
+</div>
+
+
+<div class="modal2BMiddleComplete" id="modal2BMiddleComplete">
+    <span class="modalHeader">MISSION COMPLETE</span>
+    <div class="modal2BTextContent">
+        <span id="mission2EndModalTextContentText"></span>
+        <br>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="images/ecologist/2B_2_FruitBat.png" id="resultsBat" />
+            </div>
+            <div class="col-md-6">
+                <img src="images/ecologist/2B_3_InsectivrousBat.png" id="resultsBat" />
             </div>
         </div>
         <br>
-        <span class="missionModalNextButton" ng-click="beginMission()">BEGIN <i class="fa fa-chevron-right"></i></span>
-    </div>-->
-
+        <div class="row">
+            <div class="col-md-6">
+                <span id="resultsBatNames">FRUIT BATS</span>
+            </div>
+            <div class="col-md-6">
+                <span id="resultsBatNames">INSECTIVOROUS BATS</span>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="col-md-12">
+            <button class="resultsButton" ng-click="seeResults()">SEE RESULTS</button>
+        </div>
+        <br>
+    </div>
+    <br>
 </div>
 
 <div id="mission2StartCountdown">
