--- a/views/ecologist.html
+++ b/views/ecologist.html
@@ -1,40 +1,35 @@
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="missionContent">
-				<h1>ECOLOGIST</h1>
-				<h2>YOUR MISSION: <span class="missionObjectiveSpan">COLLECT BATS</span></h2>
-			</div>
-		</div>
-	</div>
-	<img src="images/paper1.png" height="30%" width="30%" id="mission2paper1" />
-	<img src="images/paper2.png" height="30%" width="30%" id="mission2paper2" />
-	<img src="images/paper3.png" height="30%" width="30%" id="mission2paper3" />
-</div>
+<!--<img src="images/ecologist/2A_MissionStart_FolderPapers.png" id="mainPageFolder" />-->
 
-<span class="objectiveHeader" id="mission2Objective1">OBJECTIVE 1</span>
-<span class="objectiveHeader" id="mission2Objective2">OBJECTIVE 2</span>
-<span class="objectiveHeader" id="mission2Objective3">OBJECTIVE 3</span>
+<!--<img src="images/ecologist/01.png" id="mainPage2BImage" />-->
+<button id="mainPageButton" style="height: 1080px; width: 1920px; background: url(images/ecologist/01.png) no-repeat" ng-click="continue()"></button>
+<!--<span class="mainPage2BMission" id="mainPage2BMission"><h1>MISSION: CAPTURE BATS</h1></span>
+<span class="mainPage2BMission" id="mainPage2BMission"><h2>Bats have been known to carry Nipah Virus in<br>the past; you need to capture sample of both<br>types of bats for testing.</h2></span>
+
+<span class="mainRightPage2BMission" id="mainRightPage2BMission"><h1>MISSION OBJECTIVES</h1></span>
+<img src="images/ecologist/2B_2_FruitBat.png" id="fruitBatIMGObjective" />
+<img src="images/ecologist/2b_MissionIntro_Arrow_LargeWingspan.png" id="fruitBat2BlargeArrow" />
+
+
+<span class="mainRightPage2BMission" id="mainRightPage2BMission"><h2>1. Catch 5 Fruit Bats</h2></span>
 
 <img src="images/ecologist/2B_Net.png" id="netIMGObjective" />
-<img src="images/ecologist/2B_2_FruitBat.png" id="fruitBatIMGObjective" />
-<img src="images/ecologist/2B_3_InsectivrousBat_Large.png" id="insectBatIMGObjective" />
+<img src="images/ecologist/2B_3_InsectivrousBat_Large.png" id="insectBatIMGObjective" />-->
 
-<span class="taskHeader" id="mission2Objective1Task">PLACE MIST NET</span>
+<!--<span class="taskHeader" id="mission2Objective1Task">PLACE MIST NET</span>
 <span class="taskHeader" id="mission2Objective2Task">CATCH FRUIT BATS</span>
 <span class="taskHeader" id="mission2Objective3Task">CATCH INSECTIVOROUS BATS</span>
 
 <span class="taskDescription" id="mission2Objective1TaskDescription">Observe the flight paths of both<br>species of bats to determine the<br>best position for your net.</span>
 <span class="taskDescription" id="mission2Objective2TaskDescription">Capture the larger fruit<br>bats to collect samples.</span>
-<span class="taskDescription" id="mission2Objective3TaskDescription">Reposition your net to capture<br>the smaller insectivorous bats<br>to collect samples.</span>
+<span class="taskDescription" id="mission2Objective3TaskDescription">Reposition your net to capture<br>the smaller insectivorous bats<br>to collect samples.</span>-->
 
-<div id="missionStartCountdown">
-	<svg>
-    	<circle cx="125" cy="125" r="100" class="currentObjectiveMissionCountdownTimer"></circle>
-  	</svg>
+<!--<div id="missionStartCountdown">
+    <svg>
+        <circle cx="125" cy="125" r="100" class="currentObjectiveMissionCountdownTimer"></circle>
+    </svg>
 </div>
 
-<div id="missionBeginText"">
-<span>MISSION WILL <br>BEGIN IN</span>
+<div id="missionBeginText" ">
+    <span>MISSION WILL <br>BEGIN IN</span>
 </div>
-<span id="missionCountdownNumber"></span>
+<span id="missionCountdownNumber"></span>-->
