protective gear url fix

--- a/views/ecologistNetPosition.html
+++ b/views/ecologistNetPosition.html
@@ -104,7 +104,7 @@
 
 
 <span class="protectiveGear2BProTip" id="protectiveGear2BProTip">PRO TIP: <br>Bats have been known to carry<br>Nipah Virus in the past.</span>
-<img src="images/protectivegear.png" id="protective2BGear" />
+<img src="images/protectiveGear.png" id="protective2BGear" />
 
 <div  class="modal2BMiddle" id="modal2BMiddle">
     <span class="modalHeader">PROTECTIVE GEAR</span>
