Fixes on results page and health officer behaviour

--- a/views/ecologistNetPosition.html
+++ b/views/ecologistNetPosition.html
@@ -1,5 +1,5 @@
 <div class="container-fluid missionHeader">
-    <div class="row">
+    <div class="row" id="topRow">
         <div class="col-md-3">
             <div class="objectivePapers">
                 <img src="images/ecologist/2B_SmallPaper1.png"  id="fruitBatsPaper"/>
@@ -21,7 +21,7 @@
             <hr class="leftMissionHeader2BHR">
         </div>
     </div>
-    <div class="row">
+    <div class="row" id="starsRow">
         <div class="col-md-3">
             <i class="fa fa-star mission2BStar" id="2bMissionStar1"></i>&nbsp;&nbsp;<i class="fa fa-star mission2BStar" id="2bMissionStar2"></i>&nbsp;&nbsp;<i class="fa fa-star mission2BStar"  id="2bMissionStar3"></i>&nbsp;&nbsp;<i class="fa fa-star mission2BStar"  id="2bMissionStar4"></i>&nbsp;&nbsp;<i class="fa fa-star mission2BStar"  id="2bMissionStar5"></i>
         </div>
@@ -84,6 +84,7 @@
 
     <img src="images/Global_Expert.png" id="globalExpert" />
     <img src="images/GLobal_SpeechBubble.png" id="globalExpertBubble" />
+    <span id="globalExpertTitle">HEALTH OFFICIAL</span>
     <span id="globalExpertDescription">Good work! Our Lab<br>Diagnostician will sample<br>these bats and release<br>them unharmed.</span>
 
     <!--<div id="mission2EndRight">
