--- a/views/ecologistResults.html
+++ b/views/ecologistResults.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+
 	<div class="row">
 		<div class="col-md-12">
 			<div class="missionContent">
@@ -32,9 +33,13 @@
 			</div>
 		</div>
 	</div>
+    <button class="invisibleButton" id="invisibleButton" ng-click="continue()"></button>
+
 </div>
 
-<div id="missionStartCountdown">
+
+
+<!--<div id="missionStartCountdown">
 	<svg>
     	<circle cx="125" cy="125" r="100" class="nextMissionCountdownTimer"></circle>
   	</svg>
@@ -43,4 +48,4 @@
 <div id="missionBeginText"">
 	<span>NEXT MISSION <br>BEGINS IN</span>
 </div>
-<span id="missionCountdownNumber"></span>
+<span id="missionCountdownNumber"></span>-->
