--- a/css/styles.css
+++ b/css/styles.css
@@ -1283,9 +1283,8 @@ font-size: 20px;
   font-size: 34px; }
 
 #protective2BGear {
-  position: relative;
-  z-index: 0;
-  top: -50px;
+  position: absolute;
+  top: 170px;
   left: 250px; 
   z-index: 3;
 }
@@ -1676,4 +1675,16 @@ font-size: 20px;
   -ms-transform: rotate(220deg);
   -o-transform: rotate(220deg);
   transform: rotate(220deg);
+}
+
+#invisibleButton {
+
+    height: 1080px; 
+    width: 1920px;
+    background: transparent;
+    border:none;
+    outline:none;
+    position:absolute;
+    top: 0px;
+    left: 0px;
 }
